--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "predis/predis": "v1.0.1"
+        "predis/predis": "^1.1@dev"
     },
     "autoload": {
         "psr-4": {
